Bug 205825 - sublime target missing from the tree
Summary: sublime target missing from the tree
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Build tools: CMake (show other bugs)
Version: git master
Platform: Unlisted Binaries Linux
: HI major
Target Milestone: 4.0.0
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-31 20:23 UTC by Andreas Pakulat
Modified: 2009-09-12 00:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Pakulat 2009-08-31 20:23:54 UTC
Opening kdevplatform as project inside kdevelop I'm missing the sublime target inside the sublime folder.

I'm also missing other targets, for example all plugins don't have a target here.

debugger library also shows no target, all other libs seem to be fine.
Comment 1 Aleix Pol 2009-09-12 00:56:04 UTC
SVN commit 1022526 by apol:

Properly identify the project root. The old method is not valid anymore since the reparenting change a while ago.

BUG: 205825


 M  +2 -2      cmakemanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1022526