Properly identify the project root. The old method is not valid anymore since the reparenting change a while ago.

BUG: 205825